tests/NormalTests/paczka1/fuzzy1/11646033.err
Error in line 5: S223 A194 75,74
Error in line 11: rCwQqJmYLWB S223 66,5
Error in line 16: S223 A194 269,9
Error in line 22: S223 A47 17,3
